--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# claude code config files
+.claude/
+.mcp.json
+
 # vercel
 .vercel
 
