--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack --hostname 0.0.0.0",
     "build": "next build",
-    "start": "next start",
+    "start": "npm run db:migrate && next start",
+    "start:prod": "next start",
     "lint": "eslint",
     "db:push": "drizzle-kit push --config=drizzle.config.ts",
     "db:migrate": "tsx ./src/db/migrate.ts",
@@ -28,6 +29,7 @@
     "react-hook-form": "^7.64.0",
     "stripe": "^19.1.0",
     "tsx": "^4.20.6",
+    "drizzle-kit": "^0.31.5",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -37,7 +39,6 @@
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
