--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.6",
     "next": "15.5.4",
     "pg": "^8.16.3",
@@ -28,9 +29,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
+    "resend": "^6.4.1",
     "stripe": "^19.1.0",
     "tsx": "^4.20.6",
-    "drizzle-kit": "^0.31.5",
     "zod": "^4.1.11"
   },
   "devDependencies": {
